# LunarTcc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
tests/: CMakeLists.txt  TestRun.py  frontendTest.cpp  test.c  test.txt
tests/PreProcessor/: PP-File.c  include.c
tests/PreProcessor/src/: PP-Include.c
tests/Sema/: assigning-to-const-variable.c  struct-initialization.c  too-few-arguments-for-call.c  too-many-arguments-for-call.c  variable-redefinition.c
tests/algorithms/: bubble_sort.c  floyd_cycle_detection_algorithm.c  hash_crc32.c  prime.c  quick_sort.c  radix_sort.c  stack.c
tests/backend/: aarch64-fp-arithmetic-2.c  test-RegisterAllocate-1.c  test-RegisterAllocate.c
tests/backend/AArch64/: aarch64-select-xor.c
tests/examples/: algorithm-gcd.c  tetris-board-hole-factor.c  tetris-board-line-continutiy.c  tetris-board.c  tetris-bot.c  tetris-does_piece_fit.c  tetris-findAndRemoveFilledLined.c  tetris-new_tetris.c  tetris-rotate.c  tetris.c  tetris.h
tests/frontend/: array-variables-2.c  array-variables-3.c  array-variables.c  basic-types.c  const.c  conversion.c  for-statement.c  function-call.c  function-with-local-var.c  global-2D-array-variable-initialized.c  global-array-variable-init.c  global-array-variable.c  global-struct-variable-init.c  global-struct-variable.c  global-variable-init.c  global-variable.c  local-array-initialization-by-memcopy.c  local-variable-init.c  multiple-function.c  post-decrenment.c  post-increment-2.c  struct-assigment.c  struct-pointers.c  struct.c  tetris-1.c  typedef.c
tests/frontend/Comment/: block-comment.c  single-line-comment.c
tests/frontend/Conversion/: int-literal-to-ptr.c  int-to-ptr-conversion.c  pointer-as-array.c  sint-literal-to-ptr.c
tests/frontend/Expression/: global-3D-array-varible-initialized.c  initlistWithNegative.c  post-decrenment-2.c  post-increment.c  struct-assigment-2.c  struct-assigment-3.c  struct-assigment.c
tests/frontend/Function/: function-declaration.c  function-with-array-param-2.c  function-with-array-param.c  multiple-return.c  tetris-return-big-struct.c  varArg-funcDeclAndCall.c
tests/frontend/Lexical/: do-while-missing-condition.c  expr-statement-missing-semicolon.c  for-missing-2nd-semicolon.c  if-missing-condition.c  missing-initialzer-expr-inf-for.c  missing-semicolon-struct-declaration.c
tests/frontend/Operator/: aarch64-select-and.c  arith-bitwise-not-operator.c  arith-bitwise-operator-or.c  bitwise-operator-xor-const.c  bitwise-operator-xor.c  cast-basic-type.c  cast-struct-ptr.c  compare-eq.c  compare-ge.c  compare-gt.c  compare-le.c  compare-lt.c  compare-ne.c  composite-assign-and.c  composite-assign-four-arith.c  composite-assign-left-shift.c  composite-assign-mod.c  composite-assign-or.c  composite-assign-right-shift.c  composite-assign-xor.c  dereferenced-ptr-as-lvalue-2.c  dereferenced-ptr-as-lvalue.c  logical-equal.c  logical-not-operator.c  logical-or-operator.c  multiple-logical.c  operator-equal.c  pre-decrement.c  pre-increment-global.c  pre-increment.c  shift-operator.c  simple-comparison.c  simple-constant-arithmetic.c  sizeof-operator-riscv-32.c  sizeof-operator.c  ternary-operator.c  trunc-64-to-32-bit.c  unary-address-of-operator-2.c  unary-address-of-operator.c  unary-minus.c  (+3 more)
tests/frontend/PreProcessor/: PP-Line.c  define.c  macro-with-param.c
tests/frontend/Sema/: accessing-unknown-struct-member.c  assigning-incompatible-type.c  assigning-to-const-variable.c  dereferencing-non-pointer-type.c  implicit-function-declaration.c  invalid-subscript-use.c  invalid-type-for-arrow.c  modulo-with-non-int.c  multiple-default-label.c  non-integer-case-label.c  non-lvalue-assignment.c  parameter-name-omitted.c  shift-with-non-int-rhs.c  signed-unsigned.c  struct-initialization.c  too-few-arguments-for-call.c  too-many-arguments-for-call.c  undefined-symbol.c  variable-redefinition.c  void-type-function-parameter.c
tests/frontend/TypeQualifiers/: multiple-type-specifier.c  signed-ret-val.c  signed.c  typedef-enum.c
tests/frontend/Types/: basic-types-3.c  basic-types.c  char-const-2.c  char-const.c  char-types.c  enum.c  fp-arithmetic.c  hex-literal.c  int-types.c  integer-literals.c  long-long-add.c  long-long-mul.c  long-types.c  (+5 more)
(+181 files in other folders)
